# cozy-extrude

./: CMakeLists.txt  README.md  client.py  cmds.c  cmds.h  commands.c  commands.h  config.h  cozy-extrude.c  fan.c  fan.h
.github/workflows/: build-uf2-tagged.yaml
board/: .gitignore  cozy-extrude.kicad_pcb  cozy-extrude.kicad_prl  cozy-extrude.kicad_pro  cozy-extrude.kicad_sch  fp-lib-table  sym-lib-table
board/fab/: cozy-extrude-B_Cu.gbr  cozy-extrude-Edge_Cuts.gbr  cozy-extrude.drl
board/lib/: HF46F.step  Hongfa-HF46F.kicad_sym  RPi-Pico-Socket.kicad_sym  RPi-Pico-Socket.step
board/lib/Hongfa-HF46F.pretty/: HF46F.kicad_mod  HF46F_5-HS1.kicad_mod
board/lib/RPi-Pico-Socket.pretty/: RPi-Pico-Socket.kicad_mod
client/: .gitignore  client.go  client.py  cmds.go  cozy-extrude.go  go.mod  go.sum  main.go  serial.go
control/: .gitignore  cmds.go  cozy-extrude.go  go.mod  go.sum  server.go
firmware/: CMakeLists.txt  cmds.c  cmds.h  cozy-extrude.c  heater.c  heater.h
firmware/lib/bme280/: CMakeLists.txt
firmware/lib/bme280/include/: bme280.h
firmware/lib/pwm_fan/: CMakeLists.txt
lib/bme280/: bme280.c
lib/bme280/include/: bme280.h
lib/pwm_fan/: fan.c
lib/pwm_fan/include/: fan.h
